<resources>
    <string name="app_name">Chat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="password_error">Please enter a valid password ( at least 6 chars )</string>
    <string name="email_error">Please enter a valid email</string>
    <string name="ok">OK</string>
    <string name="loading">loading…</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="don_t_have_account">Don\'t have Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="user_name">User Name</string>
    <string name="user_name_error">Please enter a valid user name.</string>
    <string name="phone_error">Please enter a valid phone number.</string>
    <string name="phone">Phone</string>
    <string name="room_name">Room name</string>
    <string name="description">Description</string>
    <string name="room_name_error">please enter a valid room name.</string>
    <string name="room_description_error">Please enter a valid room description.</string>
    <string name="add_room">Add room</string>
    <string name="room_added_succfully">Room added succesfully</string>
    <string name="enter_your_message">enter your message</string>
</resources>
