<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.gehad.chat.ui.register.RegisterViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:orientation="vertical"
        android:background="@drawable/bg"
        android:padding="@dimen/dp12"
        tools:context=".ui.register.RegisterActivity">

        <TextView
            android:id="@+id/create_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp20"
            android:text="@string/create_account"
            android:textSize="@dimen/sp30"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp10"
            android:textColorHint="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:text="@={vm.name}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/user_name_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_error"
            android:textColor="@color/colorRed"
            android:visibility="@{vm.nameError?View.VISIBLE:View.GONE}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone"
                android:inputType="phone"
                android:text="@={vm.phone}" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/phone_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_error"
            android:textColor="@color/colorRed"
            android:visibility="@{vm.phoneError?View.VISIBLE:View.GONE}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp10"
            android:textColorHint="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={vm.email}" />

    </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/email_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_error"
            android:textColor="@color/colorRed"
            android:visibility="@{vm.emailError?View.VISIBLE:View.GONE}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={vm.password}" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/password_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp20"
            android:text="@string/password_error"
            android:textColor="@color/colorRed"
            android:visibility="@{vm.emailError?View.VISIBLE:View.GONE}" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp20"
            android:background="@drawable/shape_btn"
            android:onClick="@{()->vm.register()}"
            android:text="@string/sign_up"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/sp18"
            />

    </LinearLayout>
</layout>