<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.gehad.chat.ui.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:padding="@dimen/dp10"
        tools:context=".ui.login.LoginActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp10"
            android:textColorHint="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/email_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={vm.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/email_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_error"
            android:textColor="@color/colorRed"
            android:visibility="@{vm.emailError?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/password_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@+id/password_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={vm.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_error"
            android:textColor="@color/colorRed"
            android:visibility="@{vm.emailError?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/login_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:background="@drawable/shape"
            android:onClick="@{()->vm.login()}"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_error"
            app:layout_constraintWidth_percent=".7" />

        <TextView
            android:id="@+id/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:text="@string/don_t_have_account"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp18"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@+id/signUp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_btn"/>

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginStart="@dimen/dp10"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp18"
            android:textStyle="bold"
            android:onClick="@{()->vm.register()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_1"
            app:layout_constraintTop_toBottomOf="@id/login_btn"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>